templates/010-deployment.yaml
###################################################
# Namespace Gitea
###################################################
apiVersion: v1
kind: Namespace
metadata:
  name: git

###############################
# Deplyoment Gitea
###############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: git
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.21.3
        ports:
        - containerPort: 3000
          name: gitea
        - containerPort: 22
          name: git-ssh
        volumeMounts:
        - mountPath: /data
          name: git-data
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: http
          initialDelaySeconds: 200
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
      volumes:
      - name: git-data
        persistentVolumeClaim:
          claimName: git-pvc
