templates/030.network.yaml
###############################
# Service
###############################
---
kind: Service
apiVersion: v1
metadata:
  name: gitea-service
  namespace: gitea-testing
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000
  - name: gitea-ssh
    port: 22


---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: git-tls
  namespace: gitea-testing
  annotations:
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # If using SSL/TLS, uncomment the next line
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.1.0/24" # Adjust the IP range as needed
spec:
  tls:
  - hosts:
    - gitea.k8s.com
    secretName: tls-gitea
  rules:
  - host: gitea.foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-service
            port:
              number: 3000
